<resources>
    <string name="app_name">حامی</string>
    <string name="home">خانه</string>
    <string name="library">کتابخانه</string>
    <string name="relaxation">آرام‌سازی</string>
    <string name="places_to_go">جایی برای رفتن</string>
    <string name="day">روز</string>
    <string name="not_feeling_good">حالم خوب نیست</string>
    <string name="article">یادداشت ها</string>
    <string name="magazine">مجله</string>
    <string name="book">کتاب</string>
    <string name="body_scan">آرام‌سازی عضلانی</string>
    <string name="care">مراقبه</string>
    <string name="breathing">تنفس</string>
    <string name="links">لینک‌ها</string>
    <string name="places">مکان‌ها</string>
    <string name="just_for_today">فقط برای امروز</string>
    <string name="signs">نشان‌ها</string>
    <string name="rahro">رهجو</string>
    <string name="rahnavard">رهرو</string>
    <string name="pishtaz">پیشتاز</string>
    <string name="pirouz">پیروز</string>
    <string name="read">بخوان</string>
    <string name="play">بازی کن</string>
    <string name="talk_to_consultant">با مشاور صحبت کن</string>
    <string name="next_article">مطلب بعدی</string>
    <string name="feeling_better">حالم بهتر شد</string>
    <string name="advance">پیشرفته</string>
    <string name="beginner">مقدماتی</string>
    <string name="no_internet_connection">شما به اینترنت وصل نیستید.</string>
    <string name="error_in_connecting_to_server">خطا در برقراری ارتباط با سرور</string>
    <string name="new_update">نسخه جدید حامی موجود است.</string>
    <string name="update">به‌روزرسانی</string>
    <string name="retry">بررسی مجدد</string>
    <string name="email_address">آدرس ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="enter">ورود</string>
    <string name="create_account">ساخت حساب کاربری</string>
    <string name="enter_as_guest">حساب مهمان</string>
    <string name="name">نام کامل</string>
    <string name="agreement">قوانین و شرایط را می‌پذیرم</string>
    <string name="haami_agreement">قوانین و شرایط استفاده از حامی</string>
    <string name="username_or_password_is_wrong">نام کاربری یا رمز عبور اشتباه است</string>
    <string name="haami_user_agreement">قوانین و شرایط استفاده از حامی</string>
    <string name="my_account">حساب کاربری من</string>
    <string name="settings">تنظیمات</string>
    <string name="adjust_clock">تنظیم ساعت</string>
    <string name="your_comments">نظرات شما</string>
    <string name="privacy">حریم خصوصی</string>
    <string name="about_haami">درباره حامی</string>
    <string name="exit">خروج</string>
    <string name="tell_your_story">داستان خود را بگو</string>
    <string name="send">ارسال</string>
    <string name="cancel">لغو</string>
    <string name="msg_token_fmt">InstanceID Token: %s</string>
    <string name="default_notification_channel_id">proUsers</string>
    <string name="fcm_message">مورد جدید</string>
    <string name="please_wait">لطفا کمی منتظر بمانید…</string>
    <string name="accept">می‌پذیرم</string>
    <string name="can_you_response_to_a_rahro">آیا در حال حاضر امکان پاسخگویی به یک رهرو را دارید؟</string>
    <string name="set_clock">تنظیم ساعت</string>
    <string name="you_must_create_account">برای ارسال مطلب خود نیاز \n دارید حساب کاربری بسازید</string>
    <string name="your_story_sent">داستان شما ارسال شد</string>
    <string name="sample_text">حاوی نکاتی پیرامون اعتیاد</string>
    <string name="you_must_create_account_for_consultant">برای درخواست مشاوره نیاز \n دارید حساب کاربری بسازید</string>
    <string name="no">خیر</string>
    <string name="yes">بله</string>
    <string name="authorize_to_open_telegram">آیا اجازه می‌دهید حامی اپلیکیشن\n تلگرام گوشی شما را باز کند؟</string>
    <string name="approve_exit_from_app">مطمئن هستید که می‌خواهید\nاز حامی خارج شوید؟</string>
    <string name="user_name">نام کاربر</string>
    <string name="signup_successful">ثبت نام شما با موفقیت انجام شد</string>
    <string name="rahjoo_sign_description">توضیح نشان رهجو</string>
    <string name="rahro_sign_description">توضیح نشان رهرو</string>
    <string name="pishtaz_sign_description">توضیح نشان پیشتاز</string>
    <string name="pirouz_sign_description">توضیح نشان پیروز</string>
    <string name="mind_care">مراقبه ذهن</string>
    <string name="moving_care">مراقبه حرکتی</string>
    <string name="mind_care_body_text">با انجام این تکنیک، می‌توانیم مشاهده‌گری باشیم که به جای اهمیت به افکار و احساسات مزاحم، با مهر، توجه خود را به بودن در لحظه حال برگردانیم.</string>
    <string name="moving_care_body_text">در انجام این تکنیک، ما فرصتی برای آشنایی با بدن خود پیدا می‌کنیم و از تنش‌هایی که در بدن ما مانده، با حرکت دادن بدن رها می‌شویم. برای چند دقیقه‌ با چشمان بسته، صدای بدن خود را در حرکت می‌شنویم.</string>
    <string name="body_scan_body_text">با انجام تکنیک بادی‌اسکن، با بردن توجه خود به نقاط مختلف بدن، در کنار رشد آرامش، آگاهی و درک خود را از حواس و جسم خود بالا می‌بریم.</string>
    <string name="breathing_beginner_body_text">با باز و بسته شدن گل‌برگ‌ها، با سه شماره دم و با سه شماره بازدم انجام می‌دهیم.</string>
    <string name="breathing_advance_body_text">با بازشدن و بسته شدن گل‌برگ‌ها، با سه شماره دم، سه شماره نفس را حبس، و با سه شماره بازدم انجام می‌دهیم.</string>
    <string name="just_for_today_tutorial_text">خاطرات، توصیه‌ها و دلنوشته‌های روزانه</string>
    <string name="next">بعدی</string>
    <string name="calendar_tutorial_text">با استفاده از این روزشمار تغییرات و پیشرفت خود را ارزیابی کنید.</string>
    <string name="next_with_anchor"><![CDATA[< بعدی]]></string>
    <string name="bad_feeling_tutorial_text">در این بخش، با خواندن، بازی و یا صحبت با یک مشاور حالتان بهتر می‌شود.</string>
    <string name="library_tutorial_text">کتاب، مجله، کتاب‌ شنیداری، و مقالات مفید را اینجا پیدا کنید.</string>
    <string name="relaxation_tutorial_text">با کمک این تمرین‌ها ذهن و بدن خود را آرام کنید.</string>
    <string name="places_tutorial_text">فهرستی از مکان‌های مفید اینجا در دسترس شماست.</string>
    <string name="setting_tutorial_text">برای تغییر تنظیمات اپلیکیشن این آیکون را لمس کنید.</string>
    <string name="close_with_x">X بستن</string>
</resources>
