<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_background">

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/colorRelaxationActiveTitle"
        android:src="@drawable/close_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iran_sans_fa_num_bold"
        android:text="@string/talk_to_consultant"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/update_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/haami_small_icon"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textview" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/iran_sans_bold"
        android:gravity="center"
        android:text="@string/authorize_to_open_telegram"
        android:textAlignment="gravity"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_image" />

    <Button
        android:id="@+id/yes_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/feeling_better_background"
        android:fontFamily="@font/iran_sans_fa_num_bold"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no_button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/no_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/cancel_button_background"
        android:fontFamily="@font/iran_sans_fa_num_bold"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/no"
        app:layout_constraintEnd_toStartOf="@+id/yes_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/yes_button" />

</androidx.constraintlayout.widget.ConstraintLayout>