<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.haami.haami.LibraryFragment"
    android:background="@color/colorBackground">

    <ImageButton
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:padding="10dp"
        android:src="@drawable/return_icon"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iran_sans_bold"
        android:text="@string/library"
        android:textSize="22sp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@+id/return_button"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/article_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/library_deactive_tab_background"
            android:fontFamily="@font/iran_sans"
            android:gravity="start|bottom"
            android:text="@string/article"
            android:textAlignment="gravity"
            android:textColor="@color/colorLibraryTitleText"
            android:textSize="18sp" />

        <Button
            android:id="@+id/magazine_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/library_deactive_tab_background"
            android:fontFamily="@font/iran_sans"
            android:gravity="start|bottom"
            android:text="@string/magazine"
            android:textAlignment="gravity"
            android:textColor="@color/colorLibraryTitleText"
            android:textSize="18sp" />

        <Button
            android:id="@+id/book_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/library_active_tab_background"
            android:fontFamily="@font/iran_sans"
            android:gravity="start|bottom"
            android:text="@string/book"
            android:textAlignment="gravity"
            android:textColor="@color/colorLibraryActiveTitle"
            android:textSize="18sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/library_frame_placeholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>